# qtempty

./: .gitignore  CMakeLists.txt  animatedwidget.cpp  animatedwidget.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  mybutton.h  mydesignerdialog.cpp  mydesignerdialog.h  mydesignerdialog.ui  mymodel.cpp  mymodel.h  sheetpanel.cpp  sheetpanel.h
.cache/clangd/index/: main.cpp.2AD6B228DFE19A70.idx
slides/: slidy.html
